design fixes with overflow and max-sizes in header

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -4,5 +4,6 @@
 
 .sidenav-and-router {
     display: flex;
+    padding: 0 24px 24px 24px;
 }
 
