--- a/src/styles.scss
+++ b/src/styles.scss
@@ -92,24 +92,26 @@ app-channel-chat {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
+  width: 4px;
+  height: 4px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #eceefe;
+  border-radius: 3px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #4a93f1;
+  background: #d3d3d3;
+  border-radius: 3px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   cursor: pointer;
-  background: #444df2;
+  background: #4a93f1;
 }
 
 /* Emoji bar*/
